--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ gym==0.24.0
 gym-maze
 tqdm
 matplotlib
+gym[box2d]
 
+pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu117
 
-
-print("initial state", env.reset())
